compiler/tools/fpp-check/test/command/duplicate_name_param_get.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/command/duplicate_name_param_get.fpp: 5.3
  async command P_PARAM_GET
  ^
error: duplicate command name P_PARAM_GET
previous occurrence is here:
[ local path prefix ]/compiler/tools/fpp-check/test/command/duplicate_name_param_get.fpp: 3.3
  param P: U32
  ^
